I renamed a few tag css classnames that better describes the functionality. Also fs-list-container was used in two spots and was causing overflow issues. So I renamed the fs-list-container around the <table> to fs-list-table-container to avoid the conflict.

--- a/src/app/components/list/list.component.scss
+++ b/src/app/components/list/list.component.scss
@@ -7,6 +7,10 @@
 
 .fs-list-container {
   width: 100%;
+}
+
+.fs-list-table-container {
+  width: 100%;
   overflow: auto;
 }
 
@@ -118,7 +122,7 @@
       }
     }
   }
-  .fs-list-filters {
+  .fs-list-header {
     display: flex;
     flex-flow: row wrap;
 
@@ -132,7 +136,7 @@
       flex-flow: row nowrap !important;
     }
 
-    .actions-container {
+    .fs-list-toolbar {
       display: flex;
       flex-flow: row nowrap;
       flex: 1 1 100%;
@@ -235,7 +239,7 @@
   }
 
   @include phone {
-    .fs-list-filters {
+    .fs-list-header {
 
       &:not(.has-filters) {
         flex-flow: row nowrap !important;
@@ -251,7 +255,7 @@
       width: auto !important;
     }
 
-    .fs-list-filters {
+    .fs-list-header {
       &.has-filters {
         flex-flow: row wrap;
       }
